--- a/boot.css
+++ b/boot.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Fleur+De+Leah&family=Hanuman:wght@300;400&display=swap");
 
-@media screen and (max-width: 100px) {
+@media screen and (max-width: 800px) {
   .left,
   .main,
   .right {
@@ -28,10 +28,11 @@ header a:hover {
 #locButton {
   color: white;
 }
-#locimg {
-  max-width: 100%;
-  max-height: 25rem;
+#bk{
+    background-image: url(images/location_icon2.jpg);
+    background-repeat: no-repeat;
 }
+
 .card-img-top {
   height: 30%;
 }
